got chord 1 selection done - woohoo

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/michaelpalumbo/project3#readme",
   "dependencies": {
     "@tonaljs/key": "^4.6.5",
-    "@tonaljs/tonal": "^4.6.5"
+    "@tonaljs/tonal": "^4.6.5",
+    "jsonwebtoken": "^8.5.1"
   }
 }
