--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@tonaljs/key": "^4.6.5",
+    "@tonaljs/tonal": "^4.6.5",
     "apollo-server-express": "^3.8.1",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
