--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@tonaljs/tonal": "^4.6.5",
     "apollo-server-express": "^3.8.1",
     "bcrypt": "^4.0.1",
+    "concurrently": "^7.2.1",
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "graphql": "^16.5.0",
