--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "faker": "^4.1.0",
     "graphql": "^16.5.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.3",
     "mongoose": "^5.9.9"
   },
   "devDependencies": {
