--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "apollo-server-express": "^3.8.1",
     "bootstrap": "^5.1.3",
     "graphql": "^16.5.0",
+    "jquery": "^3.6.0",
     "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
