--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@tonaljs/key": "^4.6.5",
     "@tonaljs/tonal": "^4.6.5",
+    "axios": "^0.27.2",
     "concurrently": "^7.2.1",
     "jsonwebtoken": "^8.5.1"
   }
