--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "@tonaljs/key": "^4.6.5",
     "@tonaljs/tonal": "^4.6.5",
     "apollo-server-express": "^3.8.1",
+    "axios": "^0.27.2",
     "bcrypt": "^4.0.1",
     "concurrently": "^7.2.1",
     "express": "^4.17.1",
