--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-server-express": "^3.8.1",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "graphql": "^16.5.0",
     "jquery": "^3.6.0",
@@ -17,11 +18,13 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.2",
+    "react-guitar-chords": "^1.0.0",
     "react-helmet": "^6.1.0",
     "react-moment": "^1.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
     "react-select": "^5.3.2",
+    "use-http": "^1.0.26",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
